tests/miniJava/neg/003857_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if static ( 0 ) { } else { } } }
